@@ -1,3 +1,7 @@
+2006-12-14  Dave Nomura <dcnltc@us.ibm.com>
+
+	* daemon/init.c: move open_opd_files call to initialization phase
+
 2006-12-11  Maynard Johnson <maynardj@us.ibm.com>
 
 	* m4/kerneloption.m4:
